<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".registration.RegistrationActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="42sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/your_email"
        android:paddingTop="24dp"
        android:paddingStart="36dp"
        />

    <EditText
        android:id="@+id/registrationEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint_registration"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/your_password"
        android:paddingTop="16dp"
        android:paddingStart="36dp"
        />

    <EditText
        android:id="@+id/registrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:inputType="textPassword"
        android:hint="@string/text_password"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/your_name"
        android:paddingTop="16dp"
        android:paddingStart="36dp"
        />

    <EditText
        android:id="@+id/registrationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/name_hint_registration"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/registrationLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/last_name_hint_registration"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/age"
        android:paddingTop="16dp"
        android:paddingStart="36dp"
        />

    <EditText
        android:id="@+id/registrationAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:layout_marginEnd="36dp"
        android:hint="@string/how_old_are_you"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/sign_up" />


</LinearLayout>


</ScrollView>