<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".login.MainActivity">


    <ImageView
        android:id="@+id/imageViewMain"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/message_center_svgrepo_com" />

    <LinearLayout
        android:id="@+id/linearLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMain"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_new"
            android:textColor="@color/white"
            android:textSize="40sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_message"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp"
            />

    </LinearLayout>
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/linearLogo"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        />
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        />
    <Button
        android:id="@+id/buttonLogin"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"

        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:text="@string/button_login"
        />
    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:textColor="@color/white"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"

        />
    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:textColor="@color/white"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"

        />




</androidx.constraintlayout.widget.ConstraintLayout>